<resources>
    <string name="app_name">ZiOrder</string>

    <string name="login_title">Login by account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="register_title">Create an account</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="id_card">ID number</string>
    <string name="phone">Phone number</string>
    <string name="address">Adress</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="option_name">Option name</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="table">Table</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="dishes">Drinks</string>

    <string name="dishes_name">Drinks name</string>
    <string name="dishes_price">Drinks price</string>
    <string name="dishes_desciptionb">Drinks desciption</string>

    <string name="category_name">Category name</string>
    <string name="area_name">Area name</string>
    <string name="table_name">Table name</string>
    <string name="scan_qr">Scan</string>

    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="agree">Angree</string>
    <string name="disangree">Disangree</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="error">Error:</string>
    <string name="connection_fail">Connection fail</string>

    <string name="ready">(Ready)</string>
    <string name="being_used">(Being used)</string>

    <string name="login_fail">Login information is incorrect</string>
    <string name="full_fill">Please fill out the form</string>

    <string name="bill">Bill</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="pay">Pay</string>
    <string name="pay_confirm">Pay confirm</string>
    <string name="cart">Cart</string>
    <string name="confirm">Confirm</string>
    <string name="message">Message</string>
    <string name="continues">Continue</string>
    <string name="bill_ínerted">Bill inserted</string>
    <string name="bill_updated">Bill updated</string>
    <string name="back_to_table_screen">Back to table screen</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>

    <string name="create_bill">Initialation Bill</string>
    <string name="update_bill">Update Bill</string>
    <string name="create_bill_loading">Bill is being created. Please wait</string>
    <string name="update_bill_loading">Bill is being updated. Please wait</string>

    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="contact">Contact</string>
    <string name="manager">Manager</string>

    <string name="change_password">Change password</string>
    <string name="logout">Log out</string>

    <string name="fullname">Full name</string>
    <string name="position">Position</string>
    <string name="phone_number">Phone</string>

    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="renew_password">Re-enter new password</string>
    <string name="checking">Checking</string>
    <string name="checking_and_change">Checking and changing your password. Please wait</string>
    <string name="old_pass_wrong">Your old password is wrong</string>
    <string name="change_pass_success">Change password success</string>
    <string name="new_pass_not_match">New password does not match</string>
    <string name="result">Result</string>
    <string name="auto_get_ip">Auto get IP</string>
    <string name="access_denied">Access is denied</string>

    <string name="add_dish">Add drinks</string>
    <string name="add_table">Add table</string>
    <string name="require_category">Require choose category</string>
    <string name="require_area">Require choose area</string>

    <string name="search_table">Search Table</string>
    <string name="search_dishes">Search Drinks</string>
    <string name="fill_table_search">Fill table name to search</string>
    <string name="fill_drinks_search">Fill drinks name to search</string>

    <string name="handling">Handling</string>
    <string name="progress">Progress</string>
    <string name="canceled">Canceled</string>
    <string name="incorrect_format">Incorrect format</string>
    <string name="flash_not_ready">Flash isn\'t ready</string>
    <string name="front_camera_not_ready">Front camera isn\'t ready</string>
    <string name="pick_image">Pick image</string>
    <string name="set_ip">Set IP destination</string>
    <string name="fill_ip_address">Fill an IP address</string>
</resources>
