<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SettingActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/font_title_lv1"
        android:textAlignment="center"
        android:text="@string/setting"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_view"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/edittext_ip"
            android:layout_margin="@dimen/space_view"
            android:drawableStart="@drawable/ip"
            android:drawablePadding="@dimen/space_view"
            android:textAlignment="center"
            android:focusable="false"
            android:inputType="none"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/edittext_set_destination_ip"
            android:layout_margin="@dimen/space_view"
            android:drawableEnd="@drawable/ip"
            android:drawablePadding="@dimen/space_view"
            android:textAlignment="center"
            android:hint="@string/fill_ip_address"
            android:inputType="text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_set_ip"
            android:layout_margin="@dimen/space_view"
            android:background="@drawable/blue_button_format"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/font_title_lv3"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:text="@string/set_ip"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>